<resources>
    <string name="app_name">The Watcher News</string>
    <string name="minute_ago">one minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>

    <string name="hour_ago">one hour ago</string>
    <string name="hours_ago">%d minutes ago</string>

    <string name="day_ago">yesterday</string>
    <string name="days_ago">%d days ago</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">News Categories</string>

    <string name="language_title">Language</string>

    <!-- Messages Preferences -->


    <!-- Sync Preferences -->
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_category">Categories</string>
    <string name="title_tab_tec">Tech</string>
    <string name="share_title">Share News!</string>
    <string name="share_message">Check this out %s</string>



    <!-- Tabs-->
    <string name="tab_entertainment">Entertainment</string>
    <string name="tab_tech">Tech</string>
    <string name="tab_world">World</string>
    <string name="tab_sports">Sports</string>
    <string name="tab_politics">Politics</string>
    <string name="tab_business">Business</string>
    <string name="tab_breaking">Breaking News</string>

</resources>
