<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general_header">
        <SwitchPreferenceCompat
            app:key="breaking"
            app:defaultValue="true"
            app:title="@string/tab_breaking"/>

        <SwitchPreferenceCompat
            app:key="entertain"
            app:defaultValue="true"
            app:title="@string/tab_entertainment"/>

        <SwitchPreferenceCompat
            app:key="tech"
            app:defaultValue="true"
            app:title="@string/tab_tech"/>

        <SwitchPreferenceCompat
            app:key="sports"
            app:defaultValue="true"
            app:title="@string/tab_sports"/>

        <SwitchPreferenceCompat
            app:key="business"
            app:defaultValue="true"
            app:title="@string/tab_business"/>

        <SwitchPreferenceCompat
            app:key="world"
            app:defaultValue="true"
            app:title="@string/tab_world"/>

        <SwitchPreferenceCompat
            app:key="politics"
            app:defaultValue="true"
            app:title="@string/tab_politics"/>
    </PreferenceCategory>
</PreferenceScreen>
